@@ -6,6 +6,7 @@ import java.net.URL;
 import com.nordstrom.automation.selenium.core.LocalGridServer;
 import com.nordstrom.automation.selenium.sidecar.GridServerRegistration;
 import com.nordstrom.automation.selenium.sidecar.SidecarClient;
+import com.nordstrom.common.uri.UriUtils;
 
 import com.nordstrom.common.base.UncheckedThrow;
 
@@ -23,10 +24,8 @@ public class LifecycleRegistrationStrategy implements RegistrationStrategy {
     @Override
     public void register(LocalGridServer server, Process process) {
         try {
-            String path = server.isHub()
-                    ? "/grid/admin/LifecycleServlet?action=shutdown"
-                    : "/extra/LifecycleServlet?action=shutdown";
-            URL lifecycleUrl = new URL(server.getUrl(), path);
+            String path = server.isHub() ? "/grid/admin/LifecycleServlet" : "/extra/LifecycleServlet";
+            URL lifecycleUrl = UriUtils.uriForPath(server.getUrl(), path, "action=shutdown").toURL();
             SidecarClient.register(GridServerRegistration.forLifecycle(
                     server.getHubPort(), server.getUrl(), server.isHub(), lifecycleUrl));
         } catch (MalformedURLException e) {
